--- a/app/globals.css
+++ b/app/globals.css
@@ -2,15 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-div{
+/* div{
+  width: 100%;
   height: 70px;
   background-color: #01012a;
   display: flex;
   justify-content: center;
-  justify-items: center;
-  align-content: end;
+ 
+  align-items:center;
   color: #ffff;
-  gap: 20px;
-  padding: 50px
+  gap: 60px;
   
-}
+  
+} */
